Fix glitch and added more line spacing

--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ h1{
   border-style: solid;
   border-width: 1px;
   border-color: #a3a3a3;
-
+  line-height: 1.8;
 }
 
 .content-header {
